# NativeScalaJNIBridgeExample

./: build.sbt
project/: plugins.sbt
src/main/scala/bridge/: WindowInfo.scala
src/native/: CMakeLists.txt  Screenshot.m
src/native/include/: bridge_Screenshot__.h
